homepage url fi

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kalaiselvi-ui/redux-toolkit-ecommerce/",
+  "homepage": "https://kalaiselvi-ui.github.io/redux-toolkit-ecommerce/",
   "name": "ecommerce-react-redux-toolkit",
   "version": "0.1.0",
   "private": true,
